# django-brake

./: pyproject.toml
brake/: decorators.py
brake/tests/: custom_backend.py
